--- a/data/Dashboard.Rmd
+++ b/data/Dashboard.Rmd
@@ -7,6 +7,7 @@ output:
     vertical_layout: fill
     social: menu
     source_code: embed
+    theme: united  # Example theme
 runtime: shiny
 ---
 
